--- a/services.html
+++ b/services.html
@@ -300,11 +300,11 @@
 </div>
 
   <!-- EV CERTIFICATES -->
-  <h2>Extended Validation (EV) Certificates</h2>
+<!--  <h2>Extended Validation (EV) Certificates</h2> -->
 
   <div class="card">
     <h3>EV Multi-Domain SSL (3 Domains)</h3>
-    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo EV Multi-Domain" />
+    <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo EV Multi-Domain" />
     <p><strong>Validation Type:</strong> EV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
     <p><strong>Issuance:</strong> 1–5 Days</p>
@@ -318,14 +318,14 @@
       data-item-price="649.99"
       data-item-url="services.html"
       data-item-description="Extended Validation SSL with 3 domains included, full organization verification, and $1.75M warranty."
-      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      data-item-image="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png">
       Add to cart
     </button>
   </div>
 
   <div class="card">
-    <h3>EV SSL Certificate</h3>
-    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo EV SSL" />
+<!--    <h3>EV SSL Certificate</h3>-->
+    <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo EV SSL" />
     <p><strong>Validation Type:</strong> EV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
     <p><strong>Issuance:</strong> 1–5 Days</p>
@@ -339,17 +339,17 @@
       data-item-price="279.99"
       data-item-url="services.html"
       data-item-description="Extended Validation SSL with company name in browser bar and $1.75M warranty."
-      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      data-item-image="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png">
       Add to cart
     </button>
   </div>
 
   <!-- OV CERTIFICATES -->
-  <h2>Organization Validation (OV) Certificates</h2>
+<!--  <h2>Organization Validation (OV) Certificates</h2>-->
 
   <div class="card">
     <h3>OV Wildcard SSL</h3>
-    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV Wildcard" />
+    <img src="https://seeklogo.com/images/S/sectigo-logo-3EF2BDCC26-seeklogo.com.png" alt="Sectigo OV Wildcard" />
     <p><strong>Validation Type:</strong> OV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
     <p><strong>Issuance:</strong> 1–3 Days</p>
@@ -363,14 +363,14 @@
       data-item-price="879.99"
       data-item-url="services.html"
       data-item-description="Organization Validated Wildcard SSL with full business verification and $1M warranty."
-      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-3EF2BDCC26-seeklogo.com.png">
       Add to cart
     </button>
   </div>
 
   <div class="card">
     <h3>OV Multi-Domain SSL (3 Domains)</h3>
-    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV Multi-Domain" />
+    <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" />
     <p><strong>Validation Type:</strong> OV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
     <p><strong>Issuance:</strong> 1–3 Days</p>
@@ -384,14 +384,14 @@
       data-item-price="499.99"
       data-item-url="services.html"
       data-item-description="Organization Validated SSL with 3 domains, secure for business and internal connections."
-      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      data-item-image="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png">
       Add to cart
     </button>
   </div>
 
   <div class="card">
-    <h3>OV SSL Certificate</h3>
-    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV SSL" />
+<!--    <h3>OV SSL Certificate</h3> -->
+    <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo OV SSL" />
     <p><strong>Validation Type:</strong> OV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
     <p><strong>Issuance:</strong> 1–3 Days</p>
@@ -405,7 +405,7 @@
       data-item-price="179.00"
       data-item-url="services.html"
       data-item-description="Organization Validated SSL for business and internal use, $1M warranty included."
-      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      data-item-image="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png">
       Add to cart
     </button>
   </div>
