--- a/services.html
+++ b/services.html
@@ -324,7 +324,7 @@
   </div>
 
   <div class="card">
-<!--    <h3>EV SSL Certificate</h3>-->
+    <h3>EV SSL Certificate</h3>
     <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo EV SSL" />
     <p><strong>Validation Type:</strong> EV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
@@ -390,7 +390,7 @@
   </div>
 
   <div class="card">
-<!--    <h3>OV SSL Certificate</h3> -->
+    <h3>OV SSL Certificate</h3>
     <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo OV SSL" />
     <p><strong>Validation Type:</strong> OV</p>
     <p><strong>Reissue:</strong> Unlimited</p>
