--- a/services.html
+++ b/services.html
@@ -536,6 +536,21 @@
   </button>
 </div>
 
+<!-- Sophos Cybersecurity Suite -->
+<div class="card">
+  <h3>Sophos Cybersecurity Suite</h3>
+  <img src="https://images.seeklogo.com/logo-png/30/1/sophos-logo-png_seeklogo-303124.png" 
+       alt="Sophos Cybersecurity Suite" 
+       style="width:100%;border-radius:10px;margin:10px 0;">
+  <p>Enterprise-grade protection combining endpoint defense, firewalls, and managed detection.</p>
+  <ul>
+    <li>AI-powered endpoint protection</li>
+    <li>Secure web gateway and firewall</li>
+    <li>24/7 MDR integration</li>
+  </ul>
+  <span class="badge">View Sophos Solutions</span>
+  <a class="btn" href="Sophos_products.html">Explore Sophos</a>
+</div>
 
 
 <!-- Software License Keys
