--- a/services.html
+++ b/services.html
@@ -46,10 +46,10 @@
 
   <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
   <meta name="theme-color" content="#007bff">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
 
   <style>
     :root {
@@ -168,7 +168,7 @@
 <body>
 
   <header>
-    <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo" />
+    <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo" />
     <h1>THQ Cyber Division — Services</h1>
     <button class="snipcart-customer-signin">My Account</button>
   </header>
