--- a/services.html
+++ b/services.html
@@ -16,14 +16,14 @@
   <meta property="og:title" content="Cyber Threat Intelligence & Secure Services | THQ Cyber Division">
   <meta property="og:description" content="Threat intelligence subscriptions, incident response advisory, malware analysis, secure dedicated hosts & instances and custom security software." />
   <meta property="og:url" content="https://thqcyberdivision.github.io/services.html">
-  <meta property="og:image" content="https://thqcyberdivision.github.io/logo.png">
+  <meta property="og:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="THQ Cyber Division - Threat Intelligence & Secure Services">
   <meta name="twitter:description" content="Professional CTI, rapid IR advisory, malware analysis, secure dedicated hosts & instances and custom software development.">
-  <meta name="twitter:image" content="https://thqcyberdivision.github.io/logo.png">
+  <meta name="twitter:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
 
   <script type="application/ld+json">
   {
