--- a/privacy.html
+++ b/privacy.html
@@ -11,9 +11,11 @@
   <title>Privacy Policy | THQ Cyber Division Unincorporated</title>
   <meta name="description" content="Read how THQ Cyber Division Unincorporated protects your privacy and manages your personal information.">
 <!--  <link rel="stylesheet" href="styles.css" />-->
-  
-  <link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
-  <style>
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+    <style>
     body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -105,7 +107,7 @@
 <body>
   <header>
     <a href="https://thqcyberdivision.github.io/index.html">
-        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+        <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo">
 	     </a>
     <h1>Privacy Policy</h1>
   </header>
