--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,10 @@
   <title>Terms of Use | THQ Cyber Division Unincorporated</title>
   <meta name="description" content="Review the Terms of Use for accessing and using the services of THQ Cyber Division Unincorporated.">
   <!--<link rel="stylesheet" href="styles.css" />-->
-  <link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   
   <style>
     body {
@@ -106,7 +109,7 @@
 <body>
   <header>
     <a href="https://thqcyberdivision.github.io/index.html">
-        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+        <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo">
 	     </a>
     <h1>Terms of Service</h1>
   </header>
