--- a/about.html
+++ b/about.html
@@ -19,15 +19,16 @@
   <meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://thqcyberdivision.github.io/">
-  <meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+  <meta property="og:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="THQ Cyber Division Unincorporated">
   <meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
-  <meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+  <meta name="twitter:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon_192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   <meta name="theme-color" content="#007bff">
 
   <style>
@@ -113,7 +114,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="logo.png" alt="THQ Logo">
+      <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo">
     </a>
     <h1>About Us - THQ Cyber Division</h1>
   </header>
