--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Read the latest articles, tips, and updates from THQ Cyber Division Unincorporated.">
   <link rel="stylesheet" href="main.css">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; color: #000; }
     header, footer { background: #000; color: #fff; text-align: center; padding: 15px 0; }
@@ -75,7 +79,7 @@
 </head>
 <body>
 <header>
-  <a href="index.html"><img src="logo.png" alt="THQ Logo"></a>
+  <a href="index.html"><img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo"></a>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
