--- a/Sophos_products.html
+++ b/Sophos_products.html
@@ -11,6 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore Sophos endpoint, firewall, and managed detection products offered by THQ Cyber Division.">
   <meta name="keywords" content="Sophos, cybersecurity, firewall, endpoint, MDR, threat prevention, antivirus, secure network">
+   <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
   <style>
     :root {
       --accent: #4169e1;
@@ -80,7 +84,7 @@
 </head>
 <body>
   <header>
-    <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo" />
+    <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo" />
     <h1>Sophos Cybersecurity Solutions</h1>
   </header>
 
