--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://thqcyberdivision.github.io/">
-<meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<meta property="og:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
 
 <!-- Twitter Card Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="THQ Cyber Division Unincorporated">
 <meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
-<meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<meta name="twitter:image" content="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
 
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#007bff">
@@ -38,7 +38,7 @@
 	  "@type": "Organization",
 	  "name": "THQ Cyber Division Unincorporated",
 	  "url": "https://thqcyberdivision.github.io/",
-	  "logo": "https://thqcyberdivision.github.io/logo.png",
+	  "logo": "https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn",
 	  "description": "THQ Cyber Division Unincorporated provides virtual assistant and IT support services worldwide, helping individuals and businesses increase productivity with expert support.",
 	  "sameAs": [
 	    "https://github.com/thqcyberdivision"
@@ -72,10 +72,10 @@ if ('serviceWorker' in navigator) {
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
 
     <title>Home - THQ Cyber Division Unincorporated</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
+	 <link rel="icon" type="image/png" sizes="16x16" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
     <style>
         html {
             box-sizing: border-box;
@@ -296,7 +296,7 @@ if ('serviceWorker' in navigator) {
 
     <header>
         <a href="https://thqcyberdivision.github.io/index.html">
-        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+        <img src="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn" alt="THQ Logo">
 	     </a>
         <h1>Welcome to THQ Cyber Division</h1>
     </header>
