--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
     "@type": "Organization",
     "name": "THQ Cyber Division Unincorporated",
     "url": "https://thqcyberdivision.github.io/",
-    "logo": "https://thqcyberdivision.github.io/logo.png",
+    "logo": "https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn",
     "description": "Professional cyber threat intelligence services, secure Dedicated Hosts & Dedicated Instances rentals and custom software development for security operations and research.",
     "sameAs": ["https://github.com/thqcyberdivision"],
     "contactPoint": {
@@ -413,128 +413,6 @@
 
 
 
-<!-- THQ Cyber WAF Starter -->
-<div class="card">
-  <h3>THQ Cyber WAF — Starter</h3>
-	 <img src="https://cdn.pixabay.com/photo/2022/04/08/12/35/cybersecurity-7119389_1280.jpg" 
-       alt="THQ Cyber WAF Starter" 
-       style="width:100%;border-radius:10px;margin:10px 0;">
-  <p>
-    Basic protection with <strong>1 Web ACL</strong> and <strong>5 Rules</strong>. 
-    Perfect for small sites and individual developers who need essential WAF coverage.
-  </p>
-  <ul>
-    <li>1 Web ACL</li>
-    <li>5 Custom Rules</li>
-    <li>No Managed Rule Groups</li>
-  </ul>
-  <span class="badge">From $50/mo</span>
-  <button class="btn snipcart-add-item"
-    data-item-id="waf-starter"
-    data-item-name="THQ Cyber WAF Starter"
-    data-item-price="50"
-    data-item-url="services.html"
-    data-item-description="THQ Cyber WAF Starter — 1 Web ACL, 5 Rules, no managed rule groups"
-    data-item-image="https://cdn.pixabay.com/photo/2022/04/08/12/35/cybersecurity-7119389_1280.jpg"
-    data-item-custom1-name="Setup Type"
-    data-item-custom1-options="Standard Setup|Advanced Setup[+80.00]">
-    Add to cart
-  </button>
-</div>
-
-<!-- THQ Cyber WAF Business -->
-<div class="card">
-  <h3>THQ Cyber WAF — Business</h3>
-	<img src="https://cdn.pixabay.com/photo/2022/11/12/10/25/sign-7586686_1280.jpg" 
-       alt="THQ Cyber WAF Business"
-       style="width:100%;border-radius:10px;margin:10px 0;">
-  <p>
-    Enhanced protection for SMBs and developers managing multiple web properties. 
-    Includes <strong>2 Web ACLs</strong>, <strong>10 Rules</strong>, and <strong>1 Managed Rule Group</strong>.
-  </p>
-  <ul>
-    <li>2 Web ACLs</li>
-    <li>10 Custom Rules</li>
-    <li>1 Managed Rule Group</li>
-  </ul>
-  <span class="badge">From $150/mo</span>
-  <button class="btn snipcart-add-item"
-    data-item-id="waf-business"
-    data-item-name="THQ Cyber WAF Business"
-    data-item-price="150"
-    data-item-url="services.html"
-    data-item-description="THQ Cyber WAF Business — 2 Web ACLs, 10 Rules, 1 Managed Rule Group"
-    data-item-image="https://cdn.pixabay.com/photo/2022/11/12/10/25/sign-7586686_1280.jpg"
-    data-item-custom1-name="Setup Type"
-    data-item-custom1-options="Standard Setup|Advanced Setup[+100.00]">
-    Add to cart
-  </button>
-</div>
-
-<!-- THQ Cyber WAF Enterprise -->
-<div class="card">
-  <h3>THQ Cyber WAF — Enterprise</h3>
-	 <img src="https://cdn.pixabay.com/photo/2022/04/08/12/37/cybersecurity-7119401_1280.jpg" 
-       alt="THQ Cyber WAF Enterprise"
-       style="width:100%;border-radius:10px;margin:10px 0;">
-<p>    Comprehensive web application protection for large-scale deployments. 
-    Includes <strong>5 Web ACLs</strong>, <strong>20 Rules</strong>, and <strong>3 Managed Rule Groups</strong>.
-  </p>
-  <ul>
-    <li>5 Web ACLs</li>
-    <li>20 Custom Rules</li>
-    <li>3 Managed Rule Groups</li>
-  </ul>
-  <span class="badge">From $300/mo</span>
-  <button class="btn snipcart-add-item"
-    data-item-id="waf-enterprise"
-    data-item-name="THQ Cyber WAF Enterprise"
-    data-item-price="300"
-    data-item-url="services.html"
-    data-item-description="THQ Cyber WAF Enterprise — 5 Web ACLs, 20 Rules, 3 Managed Rule Groups"
-    data-item-image="https://cdn.pixabay.com/photo/2022/04/08/12/37/cybersecurity-7119401_1280.jpg"
-    data-item-custom1-name="Setup Type"
-    data-item-custom1-options="Standard Setup|Advanced Setup[+150.00]">
-    Add to cart
-  </button>
-</div>
-<!-- Elastic VMware Service – 4 Instances -->
-<div class="card">
-  <h3>Elastic VMware Service – 4 Instances</h3>
-  <p>Pre-configured VMware environment with flexible regional deployment.</p>
-  <img src="https://cdn.pixabay.com/photo/2017/01/20/17/26/operating-system-1995434_1280.png" alt="Elastic VMware 4 Instances" />
-  <span class="badge">From $4,061.72/mo</span>
-  <button class="btn snipcart-add-item"
-    data-item-id="evs-4"
-    data-item-name="Elastic VMware Service – 4 Instances"
-    data-item-price="4061.72"
-    data-item-url="services.html"
-    data-item-description="Elastic VMware Service – 4 Instances, select deployment region"
-    data-item-image="https://cdn.pixabay.com/photo/2017/01/20/17/26/operating-system-1995434_1280.png"
-    data-item-custom1-name="Region"
-    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[-10]">
-    Add to cart
-  </button>
-</div>
-
-<!-- Elastic VMware Service – 8 Instances -->
-<div class="card">
-  <h3>Elastic VMware Service – 8 Instances</h3>
-  <p>Enterprise-grade VMware deployment for demanding workloads.</p>
-  <img src="https://cdn.pixabay.com/photo/2021/09/10/18/49/secretary-6613931_1280.jpg" alt="Elastic VMware 8 Instances" />
-  <span class="badge">From $8,123.44/mo</span>
-  <button class="btn snipcart-add-item"
-    data-item-id="evs-8"
-    data-item-name="Elastic VMware Service – 8 Instances"
-    data-item-price="8123.44"
-    data-item-url="services.html"
-    data-item-description="Elastic VMware Service – 8 Instances, select deployment region"
-    data-item-image="https://cdn.pixabay.com/photo/2021/09/10/18/49/secretary-6613931_1280.jpg"
-    data-item-custom1-name="Region"
-    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[-10]">
-    Add to cart
-  </button>
-</div>
 
 <!-- Sophos Cybersecurity Suite -->
 <div class="card">
