--- a/blog.html
+++ b/blog.html
@@ -105,6 +105,31 @@
     </section>
     <section class="blog-list" id="blogList">
 
+      <!-- Cybersecurity: Sophos -->
+<article class="blog-preview" data-category="cybersecurity">
+  <img src="https://images.seeklogo.com/logo-png/38/1/sophos-logo-png_seeklogo-380354.png" 
+       alt="Sophos Cybersecurity Suite" 
+       style="background:#fff;padding:10px;border-radius:8px;">
+  <div>
+    <h2>Next-Gen Protection with Sophos Cybersecurity Suite</h2>
+    <p class="meta">Posted by THQ Cyber Division Team on November 8th, 2025 | <span class="category">Cybersecurity</span></p>
+    <p class="summary">Discover how Sophos’ AI-driven protection helps businesses safeguard endpoints, networks, and identities—now available through THQ Cyber Division.</p>
+    <button class="read-more">Read More</button>
+    <div class="blog-full-content">
+      <h3>Why Choose Sophos?</h3>
+      <p>Sophos provides unified threat protection across endpoints, servers, email, and cloud workloads. The Sophos Central platform allows you to manage all security components from one intuitive dashboard, reducing complexity and boosting defense automation.</p>
+      <ul>
+        <li><strong>Endpoint Protection:</strong> AI-driven threat detection and active ransomware prevention</li>
+        <li><strong>Firewall:</strong> Advanced intrusion prevention and web filtering</li>
+        <li><strong>Managed Detection & Response (MDR):</strong> 24/7 human-led threat hunting</li>
+      </ul>
+      <p>Businesses benefit from scalability, simplified management, and a lower total cost of ownership compared to fragmented security tools.</p>
+      <p><strong>Recommended for:</strong> Small to medium enterprises, remote teams, and organizations seeking a single unified cybersecurity framework.</p>
+      <p>Explore configurations and licensing directly on our <a href="Sophos_products.html">Sophos Product Page</a>.</p>
+    </div>
+  </div>
+</article>
+
       <article class="blog-preview" data-category="cybersecurity">
   <img src="https://cdn.pixabay.com/photo/2012/04/12/13/02/firewall-29940_1280.png?auto=format&fit=crop&w=400&q=80" alt="Web Application Firewall">
   <div>
