--- a/Sophos_products.html
+++ b/Sophos_products.html
@@ -34,30 +34,54 @@
       flex-direction: column;
       height: 100vh;
     }
-    header {
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    header img { width: 90px; display: block; margin: 0 auto; }
-    header h1 { margin-top: 8px; font-size: 1.3rem; }
+   header {
+  background: #000;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 12px 10px;
+}
 
-    nav {
-      background: #111;
-      display: flex;
-      justify-content: center;
-      gap: 18px;
-      padding: 12px;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      padding: 8px 12px;
-      border-radius: 6px;
-    }
+header img {
+  max-width: 70px;
+  height: auto;
+  margin-bottom: 6px;
+}
+
+header h1 {
+  font-size: 1.2rem;
+  margin: 0;
+  text-align: center;
+}
+
+nav {
+  background: #111;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 12px;
+  padding: 8px 5px;
+}
+
+nav a {
+  font-size: 0.95rem;
+  padding: 5px 10px;
+}
+
+@media (max-width: 768px) {
+  header img { max-width: 50px; }
+  header h1 { font-size: 1rem; }
+  nav a { font-size: 0.85rem; padding: 4px 8px; }
+}
+
+@media (max-width: 480px) {
+  header img { max-width: 45px; }
+  header h1 { font-size: 0.95rem; }
+  nav a { font-size: 0.8rem; padding: 3px 6px; }
+}
+
     nav a:hover, nav a.active { background: var(--accent); }
 
     main {
