--- a/blog.html
+++ b/blog.html
@@ -35,19 +35,22 @@ header h1 {
   text-align: center;
 }
 
-nav {
-  background: #222;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 12px;
-  padding: 8px 5px;
-}
-
-nav a {
-  font-size: 0.95rem;
-  padding: 5px 10px;
-}
+            nav {
+      background: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
 
 @media (max-width: 768px) {
   header img { max-width: 50px; }
