--- a/services.html
+++ b/services.html
@@ -78,20 +78,21 @@
     header img { width: 90px; display: block; margin: 0 auto; }
     header h1 { margin-top: 8px; font-size: 1.3rem; }
 
-    nav {
-      background: #111;
+                nav {
+      background: #222;
+      padding: 10px 0;
       display: flex;
       justify-content: center;
-      gap: 18px;
-      padding: 12px;
+      gap: 20px;
       flex-wrap: wrap;
     }
     nav a {
       color: #fff;
       text-decoration: none;
-      font-weight: 600;
-      padding: 8px 12px;
-      border-radius: 6px;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
     }
     nav a:hover, nav a.active { background: var(--accent); }
 
