--- a/index.html
+++ b/index.html
@@ -364,14 +364,22 @@ if ('serviceWorker' in navigator) {
     We respect your privacy. No spam—only exclusive deals and referral links.
   </p>
 </section>
-    <footer>
-        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-        <nav>
-	    <a href="terms.html">Terms of Use</a> |
-	    <a href="privacy.html">Privacy Policy</a> |
-	    <a href="mailto:thqcs@protonmail.com">Email Us</a>
-	  </nav>
-    </footer>
+<footer>
+    <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
+    
+    <!-- Sophos Reseller Certificate -->
+    <div style="margin:10px 0;">
+        <img src="https://ipfs.io/ipfs/QmeN4vGrgvP1p63V3LUZVVQwjonTqVWsFXHd9u1Sc4fE5Y" 
+             alt="Sophos Silver Reseller Certificate" 
+             style="max-width:200px; height:auto; display:block; margin:0 auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+    </div>
+
+    <nav>
+        <a href="terms.html">Terms of Use</a> |
+        <a href="privacy.html">Privacy Policy</a> |
+        <a href="mailto:thqcs@protonmail.com">Email Us</a>
+    </nav>
+</footer>
 <script src="main.js"></script>
 </body>
 </html>
