--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ if ('serviceWorker' in navigator) {
     <div style="margin:10px 0;">
         <img src="https://ipfs.io/ipfs/QmeN4vGrgvP1p63V3LUZVVQwjonTqVWsFXHd9u1Sc4fE5Y" 
              alt="Sophos Silver Reseller Certificate" 
-             style="display:block; margin:0 auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+             style="width:200px; height:auto; display:block; margin:0 auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
     </div>
 
 <footer>
