--- a/index.html
+++ b/index.html
@@ -370,6 +370,12 @@ if ('serviceWorker' in navigator) {
              alt="Sophos Silver Reseller Certificate" 
              style="width:200px; height:auto; display:block; margin:0 auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
     </div>
+	
+    <div style="margin:30px 0;">
+        <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" 
+             alt="Sophos Silver Reseller Certificate" 
+             style="width:200px; height:auto; display:block; margin:0 auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+    </div>
 
 <footer>
     <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
