--- a/index.html
+++ b/index.html
@@ -364,16 +364,6 @@ if ('serviceWorker' in navigator) {
     We respect your privacy. No spam—only exclusive deals and referral links.
   </p>
 </section>
-<!-- Container for side-by-side logos -->
-<div style="display: flex; justify-content: center; gap: 70px; flex-wrap: wrap; margin: 20px 0;">
-    <img src="https://ipfs.io/ipfs/QmeN4vGrgvP1p63V3LUZVVQwjonTqVWsFXHd9u1Sc4fE5Y" 
-         alt="Sophos Silver Reseller Certificate" 
-         style="width:200px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
-
-    <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" 
-         alt="Sectigo Logo" 
-         style="width:200px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
-</div>
 
 <footer>
     <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
@@ -384,6 +374,17 @@ if ('serviceWorker' in navigator) {
         <a href="privacy.html">Privacy Policy</a> |
         <a href="mailto:thqcs@protonmail.com">Email Us</a>
     </nav>
+	<!-- Container for side-by-side logos -->
+<div style="display: flex; justify-content: center; align-items: center; gap: 50px; margin: 20px 0;">
+    <img src="https://ipfs.io/ipfs/QmeN4vGrgvP1p63V3LUZVVQwjonTqVWsFXHd9u1Sc4fE5Y" 
+         alt="Sophos Silver Reseller Certificate" 
+         style="width:200px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+
+    <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" 
+         alt="Sectigo Logo" 
+         style="width:200px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+</div>
+
 </footer>
 <script src="main.js"></script>
 </body>
