--- a/index.html
+++ b/index.html
@@ -378,11 +378,11 @@ if ('serviceWorker' in navigator) {
 <div style="display: flex; justify-content: center; align-items: center; gap: 50px; margin: 20px 0;">
     <img src="https://ipfs.io/ipfs/QmeN4vGrgvP1p63V3LUZVVQwjonTqVWsFXHd9u1Sc4fE5Y" 
          alt="Sophos Silver Reseller Certificate" 
-         style="width:100px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+         style="width:200px; height:50px; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
 
     <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" 
          alt="Sectigo Logo" 
-         style="width:100px; height:auto; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
+         style="width:100px; height:50px; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1);" />
 </div>
 
 </footer>
