--- a/services.html
+++ b/services.html
@@ -323,7 +323,7 @@
   <p>Activate your verified company name across up to 250 different domains for maximum visibility and trust.</p>
   <span class="badge">From $649.99/yr</span>
   <div style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=EV-MULTI-NOWPAYMENTS-ID&source=button" target="_blank" rel="noreferrer noopener">
+    <a href="https://nowpayments.io/payment/?iid=6436837884&source=button" target="_blank" rel="noreferrer noopener">
       <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
     </a>
   </div>
@@ -340,7 +340,7 @@
   <p>Display your verified company name in the browser bar to enhance customer confidence and trust.</p>
   <span class="badge">From $279.99/yr</span>
   <div style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=EV-SINGLE-NOWPAYMENTS-ID&source=button" target="_blank" rel="noreferrer noopener">
+    <a href="https://nowpayments.io/payment/?iid=5091193372&source=button" target="_blank" rel="noreferrer noopener">
       <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
     </a>
   </div>
@@ -359,7 +359,7 @@
   <p>Secure your entire domain, including all subdomains, with a single certificate. Ideal for businesses and internal networks.</p>
   <span class="badge">From $879.99/yr</span>
   <div style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=OV-WILDCARD-NOWPAYMENTS-ID&source=button" target="_blank" rel="noreferrer noopener">
+    <a href="https://nowpayments.io/payment/?iid=4363460714&source=button" target="_blank" rel="noreferrer noopener">
       <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
     </a>
   </div>
@@ -376,7 +376,7 @@
   <p>The ideal SSL/TLS certificate for intranets, multi-domain environments, and secure backend connections.</p>
   <span class="badge">From $499.99/yr</span>
   <div style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=OV-MULTI-NOWPAYMENTS-ID&source=button" target="_blank" rel="noreferrer noopener">
+    <a href="https://nowpayments.io/payment/?iid=5338512201&source=button" target="_blank" rel="noreferrer noopener">
       <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
     </a>
   </div>
@@ -393,7 +393,7 @@
   <p>Ideal for verified business websites and secured internal communications behind firewalls.</p>
   <span class="badge">From $179.00/yr</span>
   <div style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=OV-SINGLE-NOWPAYMENTS-ID&source=button" target="_blank" rel="noreferrer noopener">
+    <a href="https://nowpayments.io/payment/?iid=5157619023&source=button" target="_blank" rel="noreferrer noopener">
       <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
     </a>
   </div>
