--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ if ('serviceWorker' in navigator) {
 	
 <!--
     </script>
-	    <!-- Google tag (gtag.js) -->
+	     Google tag (gtag.js)
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
 -->
 
